Fix White space at bottom

--- a/src/ui/styles/keybindings.css
+++ b/src/ui/styles/keybindings.css
@@ -1,5 +1,4 @@
-#KeybindingsPanel {
-  padding: 10px;
+#KeybindingsPanel div {
   line-height: 1.5em;
 }
 
